# winrun

./: .gitignore  README.md  winrun-add.py  winrun-server.exe.py  winrun-server.py  winrun-setup.py  winrun.py  winrunclient.py  winruncyg.py
cygwin/: winrun.py
winrun-server/: CMakeLists.txt  main.cpp  resource.h  winrun-server.rc
